--- a/WebApplication1/Views/User/Music.cshtml
+++ b/WebApplication1/Views/User/Music.cshtml
@@ -11,7 +11,7 @@
         姓名:@Html.TextBox("name")
         <br />
         數字:@Html.TextBox("num")
-        <p>Hi,@ViewBag.Name,@ViewBag.Num</p>
+        <p>Hi,@ViewBag.Name,查詢音符為: @ViewBag.Num</p>
     </div>
     <input type="submit"  value="送出" />
 }
